2013-03-16 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>
	* src/hawModel/hawParser.py: New formulation for version string
	* src/hawModel/hawParserTest.py: New test case for new formulation for
	 version string
	* src/hawModel/testData/Sem_I.WiSe2012.v12.txt: New test data
	* haw2iCalendar-klickiBunti.py: Fix for umlauts in filenames
	* haw2iCalendar-klickiBunti.py: Fix for umlauts in filenames
	* src/controller.py: Replaced tabs by 8 spaces

2011-09-22 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

	* src/hawModel/hawParser.py,src/hawModel/hawDispatchProcessor.py:
	 etech text calendar file introduced a septupel with a new
	 'gebaeude'-element -> parser and dispatcher adjusted

2011-09-22 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

	* src/klickiBunti.py -> haw2iCalendar-klickiBunti.py,
	  src/haw2iCalendar.py -> haw2iCalendar.py: renamed

2011-09-22 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

	* hawModel/hawParser.py,hawModel/hawParserTest.py: Adjusted to new
	 formulations in the calendar-text file. This includes the '11 vs.
	 2011/12' thing (SoSe vs. WiSe)

	* controller.py: Will no produce a logging info if there goes
	 something wrong while parsing the calendar-text file.

	* hawModel/veranstaltungen/veranstaltungenDispatchProcessor.py,
	 hawModel/veranstaltungen/veranstaltungenParser.py,
	 hawModel/veranstaltungen/veranstaltungenParserTest.py:
	 Adjusted to new veranstaltungen-names.

	* hawModel/testData/: Added some test data.

2011-07-31 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

	* klickiBunti.py: wx.TreeCtrl and wx.StaticText will be feeded 
	 now only with unicode-strings to show umlauts correct also on
	 Windows.
	 wx.TreeCtrl under Windows can't retreive the content of a
	 'virtual root item' -- using another method instead
	 (and I don't like wxpython).
	* haw2iCalendar-1.0.exe: new, executable binary for windows

2011-07-31 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>
