@@ -114,6 +114,10 @@ f = open("testData/Sem_I.WiSe2012.v12.txt", 'r')
 dateiTestDatum10 = f.read()
 f.close()
 
+f = open("testData/Sem_IuE.SoSe2013.v106.txt", 'r')
+dateiTestDatum11 = f.read()
+f.close()
+
 class TestParser(unittest.TestCase):
     def testDeclaration(self):
         
@@ -147,7 +151,7 @@ class TestParser(unittest.TestCase):
             "datei" : [dateiTestDatum1, dateiTestDatum2, dateiTestDatum3,
                        dateiTestDatum4, dateiTestDatum5, dateiTestDatum6,
                        dateiTestDatum7, dateiTestDatum8, dateiTestDatum9,
-                       dateiTestDatum10
+                       dateiTestDatum10, dateiTestDatum11,
                        ]
         }
 
